force-app/main/default/objects/GLBP1_Mandato_de_cobranza__c/GLBP1_Mandato_de_cobranza__c.object-meta.xml
<CustomObject>
    <label>Mandato de cobranza</label>
    <nameField>
        <label>N°Folio Mandato</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mandatos de cobranza</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>