force-app/main/default/objects/GLBP1_Mandato_de_cobranza__c/fields/GLBP1_D_as_de_pago__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_D_as_de_pago__c</fullName>
    <label>Días de pago</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>