force-app/main/default/objects/GLBP1_Mandato_de_cobranza__c/fields/GLBP1_Emisor__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Emisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Emisor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Mandato de cobranza</relationshipLabel>
    <relationshipName>Mandatos_de_cobranza</relationshipName>
    <type>Lookup</type>
</CustomField>