force-app/main/default/objects/GLBP1_Mandato_de_cobranza__c/fields/GLBP1_Fecha_primer_vencimiento__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Fecha_primer_vencimiento__c</fullName>
    <label>Fecha primer vencimiento</label>
    <type>Date</type>
</CustomField>