force-app/main/default/objects/GLBP1_Mandato_de_cobranza__c/fields/GLBP1_N_Cuotas__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_N_Cuotas__c</fullName>
    <label>N°Cuotas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>