force-app/main/default/objects/GLBP1_Mandato_de_cobranza__c/fields/GLBP1_Valor_cuotas__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Valor_cuotas__c</fullName>
    <label>Valor cuotas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>