force-app/main/default/objects/GLBP1_Mandato_de_cobranza__c/fields/Plan_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Plan_de_pago__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan de pago</label>
    <referenceTo>GLBP1_Plan_de_pago__c</referenceTo>
    <relationshipLabel>Mandatos de cobranza</relationshipLabel>
    <relationshipName>Mandatos_de_cobranza</relationshipName>
    <type>Lookup</type>
</CustomField>