force-app/main/default/objects/GLBP1_Mandato_de_cobranza__c/fields/Tarjeta_de_cr_dito__c.field-meta.xml
<CustomField>
    <fullName>Tarjeta_de_cr_dito__c</fullName>
    <label>Tarjeta de crédito</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>