force-app/main/default/objects/GLBP1_Mandato_de_cobranza__c/fields/Valor_cuotas_futuras__c.field-meta.xml
<CustomField>
    <fullName>Valor_cuotas_futuras__c</fullName>
    <label>Valor cuotas futuras</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>